--- a/MGR/MGR.vcxproj
+++ b/MGR/MGR.vcxproj
@@ -118,21 +118,23 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;DLLCHEATTEMPLATE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
       <Command>if $(Configuration) == Release mkdir $(SolutionDir)Release\Plugins
 if $(Configuration) == Release xcopy /Y $(SolutionDir)Release\$(TargetFileName) $(SolutionDir)Release\Plugins
+if $(Configuration) == Release xcopy /Y $(SolutionDir)Release\$(TargetName).pdb $(SolutionDir)Release\Plugins
 if $(Configuration) == Release 7z u -tzip -r -mx=9 $(SolutionDir)Package\Package.zip $(SolutionDir)Release\Plugins</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
