--- a/MGR/MGR.vcxproj.filters
+++ b/MGR/MGR.vcxproj.filters
@@ -72,4 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Notes.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
