--- a/MGR/MGR.vcxproj
+++ b/MGR/MGR.vcxproj
@@ -134,6 +134,7 @@
     </Link>
     <PostBuildEvent>
       <Command>if $(Configuration) == Release mkdir $(SolutionDir)Release\Plugins
+if $(Configuration) == Release mkdir $(SolutionDir)Release\Plugins\Presets
 if $(Configuration) == Release xcopy /Y $(SolutionDir)Release\$(TargetFileName) $(SolutionDir)Release\Plugins
 if $(Configuration) == Release xcopy /Y $(SolutionDir)Release\$(TargetName).pdb $(SolutionDir)Release\Plugins
 if $(Configuration) == Release 7z u -tzip -r -mx=9 $(SolutionDir)Package\Package.zip $(SolutionDir)Release\Plugins</Command>
@@ -157,6 +158,7 @@ if $(Configuration) == Release 7z u -tzip -r -mx=9 $(SolutionDir)Package\Package
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DetourHooking.cpp" />
     <ClCompile Include="dllmain.cpp">
       <DeploymentContent>true</DeploymentContent>
     </ClCompile>
@@ -169,6 +171,7 @@ if $(Configuration) == Release 7z u -tzip -r -mx=9 $(SolutionDir)Package\Package
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Configs.h" />
+    <ClInclude Include="DetourHooking.h" />
     <ClInclude Include="ImGui\imconfig.h" />
     <ClInclude Include="ImGui\imgui.h" />
     <ClInclude Include="ImGui\imgui_impl_dx9.h" />
