--- a/MGR/MGR.vcxproj.filters
+++ b/MGR/MGR.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="ImGui\imgui.cpp">
       <Filter>ImGui</Filter>
     </ClCompile>
+    <ClCompile Include="DetourHooking.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MGR.h">
@@ -69,6 +72,9 @@
       <Filter>ImGui</Filter>
     </ClInclude>
     <ClInclude Include="Configs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DetourHooking.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
